test/error/no_equals.htest
#!/usr/bin/env hashdot
#. name notequals

